Fix tag spacing

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -307,5 +307,9 @@ body {
 
 .project-post {
    display: block;
-   height: 1.25rem;
+}
+
+.project-tags {
+   display: block;
+   margin-top: -0.4rem;
 }
